--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 env:
   applicationfolder: spring-boot-hello-world-example
   AWS_REGION: ap-south-1
-  S3BUCKET: codedeploystack-webappdeploymentbucket-150onvp9oapmq
+  S3BUCKET: codedeploystack-webappdeploymentbucket-150onvp9oapmq/*
 
 
 jobs:
